--- a/client/app/static/views/main.html
+++ b/client/app/static/views/main.html
@@ -2,7 +2,7 @@
   <div class="cover-container">
     <div class="masthead clearfix">
       <div class="inner">
-        <h3 class="masthead-brand">djng</h3>
+        <h3 class="masthead-brand">Keen CSV Importer </h3>
         <ul class="nav masthead-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="/api/" target="_self">API</a></li>
@@ -27,9 +27,6 @@
 
     <div class="mastfoot">
       <div class="inner">
-        <p>Django & AngularJS Boilerplate <a href="https://github.com/djng/djng">djng</a>, by <a
-          href="https://github.com/aeby/">æ</a>.
-        </p>
       </div>
     </div>
   </div>
