--- a/client/app/static/styles/main.scss
+++ b/client/app/static/styles/main.scss
@@ -159,6 +159,15 @@ body {
   }
 }
 
+td, th {
+  max-width: 100px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(153, 153, 153);
+  border-image: initial;
+  padding: 1rem;
+}
+
 @media (min-width: 992px) {
   .masthead,
   .mastfoot,
