--- a/client/app/static/views/main.html
+++ b/client/app/static/views/main.html
@@ -10,19 +10,52 @@
         </ul>
       </div>
     </div>
+    <p ng-if="import_rows.length === 0"> Nothing has been imported yet.</p>
 
-    <div class="inner cover">
-      <h1 class="cover-heading">It worked!</h1>
+    <div ng-if="import_rows > 0">
+      <div class="inner cover">
+        <table >
+          <tr>
+            <th>Id</th>
+            <th>Observation Date</th>
+            <th>Retail Sales Volume</th>
+            <th>Retail Price</th>
+            <th>ACV Distribution</th>
 
-      <p class="lead">Congratulations on your Django-Angular-powered page.</p>
-
-      <h4>Here's what to do next:</h4>
-      <ul class="list-unstyled">
-        <li ng-repeat="todo in todos">
-          {{ todo }}
-        </li>
-      </ul>
-
+            <th>Competiton</th>
+            <th>EDLP</th>
+            <th>Trade Any Promo</th>
+            <th>TV</th>
+            <th>Print</th>
+            <th>Online Display</th>
+            <th>Pre-roll Video</th>
+            <th>Paid Search</th>
+            <th>Public Relations</th>
+            <th>FSI</th>
+            <th>Digital Coupon</th>
+            <th>Shopper Marketing</th>
+          </tr>
+          <tr ng-repeat="row in import_rows">
+            <td>{{ row["id"] }} </td>
+            <td>{{ row["date"] }} </td>
+            <td>{{ row["retail_sales_volume"] }} </td>
+            <td>{{ row["retail_price"] }} </td>
+            <td>{{ row["acv_dist"] }} </td>
+            <td>{{ row["competition"] }} </td>
+            <td>{{ row["edlp"] }} </td>
+            <td>{{ row["trade_any_promo"] }} </td>
+            <td>{{ row["tv"] }} </td>
+            <td>{{ row["print_value"] }} </td>
+            <td>{{ row["online_display"] }} </td>
+            <td>{{ row["preroll_video"] }} </td>
+            <td>{{ row["paid_search"] }} </td>
+            <td>{{ row["public_relations"] }} </td>
+            <td>{{ row["fsi"] }} </td>
+            <td>{{ row["digital_coupon"] }} </td>
+            <td>{{ row["shopper_marketing"] }} </td>
+          </tr>
+        </table>
+      </div>
     </div>
 
     <div class="mastfoot">
