--- a/client/app/static/views/main.html
+++ b/client/app/static/views/main.html
@@ -5,8 +5,8 @@
         <h3 class="masthead-brand">Keen CSV Importer </h3>
         <ul class="nav masthead-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="http://localhost:8000/api/rows">API</a></li>
-          <li><a href="http://localhost:8000">Admin</a></li>
+          <li><a href=" http://csv-importer-be.ngrok.io.ngrok.io/api/rows">API</a></li>
+          <li><a href=" http://csv-importer-be.ngrok.io.ngrok.io/admin">Admin</a></li>
         </ul>
       </div>
     </div>
